Bug 1411545 - streamClosed: Fix the implicit-fallthrough warning r=luke

MozReview-Commit-ID: 4LYbud51tH7